# ncray.github.io

./: .gitignore  README.md  _config.yml  blog.html  index.markdown
_includes/: analytics.html
_layouts/: default.html  home.html
_posts/: 2019-09-01-balboa.markdown  2019-09-02-welcome-to-jekyll.markdown  2019-09-09-banff.markdown  2019-09-20-stockholm.markdown  2019-09-22-munich.markdown  2019-09-28-slovenia.markdown  2019-10-05-croatia.markdown  2019-10-08-croatia.markdown  2019-10-14-czechia.markdown  2019-10-25-portugal.markdown  2019-11-05-morocco.markdown  2019-11-24-france.markdown  2019-12-22-asia.markdown
assets/css/: custom.css
projects/: learning-game-utils.css  learning-game-utils.js
projects/aac/: aac.html
projects/caleb_learning/: app.js  index.html  style.css
projects/dino_director/: index.html
projects/image_compressor/: code.css  code.html  code.js
projects/inset_puzzles/: index.html
projects/japan-trip/: .gitignore  app.js  data.js  data.json  gemini.md  index.html  style.css
projects/japan-trip/images/: metadata.json
projects/japan-trip/scripts/: .env.template  image_sourcer.py  pyproject.toml  test_image_sourcer.py
projects/number_bridge/: index.html
projects/number_sense/: app.js  index.html  style.css
projects/personal_bod/: index.html  script.js
projects/where_donald/: index.html
tests/: learning_games.test.js
