[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client==2.194.0",
    "google-genai>=1.73.1",
    "pillow==12.2.0",
    "pytest>=9.0.3",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "tavily-python>=0.7.23",
]
